--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
   firebase_auth: 6.0.0
   cloud_firestore: 6.0.0
   firebase_crashlytics: 5.0.0
-  firebase_analytics: 12.0.0
   firebase_storage: 13.0.0
 
   # Authentication
@@ -46,6 +45,11 @@ dependencies:
   # Environment
   envied: 1.1.1
 
+  # App Tracking
+  app_tracking_transparency: 2.0.6+1
+  facebook_app_events: 0.20.1
+  firebase_analytics: 12.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,35 +60,8 @@ dev_dependencies:
   riverpod_generator: 2.6.4
 
 flutter:
+  generate: true
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  assets:
+    - assets/images/
