--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   intl: 0.20.2
   flutter_screenutil: 5.9.3
 
+  # Animations
+  lottie: 3.3.1
+
   # HTTP
   http: 1.5.0
 
@@ -67,3 +70,5 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/onboarding/
+    - assets/animations/onboarding/
