--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ firebase_options.dart
 .swiftpm/
 migrate_working_dir/
 
+# Android
+/android/app/google-services.json
+
+# iOS
+/ios/Runner/GoogleService-Info.plist
+
 # IntelliJ related
 *.iml
 *.ipr
