--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_screenutil: 5.9.3
   cached_network_image: 3.4.1
   flutter_cache_manager: ^3.4.1
+  phosphor_flutter: 2.1.0
 
   # Animations
   lottie: 3.3.1
