--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   riverpod_annotation: 2.6.1
   go_router: 16.1.0
   shared_preferences: 2.5.3
+  uuid: 4.5.1
 
   # Notifications
   flutter_local_notifications: 19.4.0
